fix/largura da imagem e retirado overflow do body

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,10 @@
 /* mobile S, M, L */
 @import url(./global.css);
 
+body{
+    overflow: hidden;
+}
+
 main {
     width: 100vw;
     height: 100vh;
@@ -13,8 +17,8 @@ main {
 .divImagem {
     background-image: url('../assets/img/Avatar\ animal.svg');
     position: fixed;
-    height: 85vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
 }
 .formLogin {
